2007-04-16 [paul]	0.2.6

	0.2.6 released

2007-04-16 [paul]	0.2.5cvs4

	* configure.ac
	* po/sr.po
		added Serbian translation by Aleksandar Urosevic

2007-04-16 [paul]	0.2.5cvs3

	* po/ca.po
	* po/es.po
	* po/hu.po
	* po/pt_BR.po
		updated by Miquel Oliete, Ricardo Mones Lastra,
		Pader Rezso, and Frederico Goncalves Guimaraes

2007-03-05 [wwp]	0.2.5cvs2

	* config/.cvsignore
		More files to ignore.

2007-03-03 [paul]	0.2.5cvs1

	* configure.ac
	* po/cs.po
		added Czech translation, submitted by Tim <timbrain@post.cz> 

2007-02-26 [paul]	0.2.5

	0.2.5 released

2007-02-26 [paul]	0.2.4cvs3

	* Makefile.am
	* configure.ac
	* config/Makefile.am
	* config/config.rpath
	* config/mkinstalldirs
		add missing config/ infrastructure (needed
		for automake 1.10)
	* po/ca.po
	* po/de.po
	* po/pl.po
		added new translations by Miquel Oliete, Stephan
		Sachse, and Pawel Pekala
	* po/es.po
	* po/fi.po
	* po/hu.po
	* po/pt_BR.po
	* po/sk.po
		updated by Ricardo Mones Lastra, Flammie Pirinen,
		Pader Rezso, Frederico Goncalves Guimaraes and
		Andrej Kacian

2007-01-23 [mones]	0.2.4cvs2

	* configure.ac
	* po/hu.po
		Added Hungarian translation.
		Thanks to Pader Rezso <rezso@rezso.net>

2007-01-16 [paul]	0.2.4cvs1

	* src/attachwarner.c
		Use correct version

2007-01-15 [paul]	0.2.4

	0.2.4 released

2007-01-15 [mones]	0.2.3cvs6

	* src/attachwarner.c
	* src/attachwarner_prefs.c
	* src/attachwarner_prefs.h
		Added preference for skipping forwarded and redirected
		(Thanks wwp for the original patch!)

2007-01-12 [paul]	0.2.3cvs5

	* po/fr.po
		Update translation (thanks to Colin)
		Fix msgfmt error

2007-01-12 [paul]	0.2.3cvs4

	* po/fr.po
		Update translation (thanks to Colin)

2007-01-12 [paul]	0.2.3cvs3

	* configure.ac
		replace references to 'sylpheed-claws' with
		'claws-mail'
		Patch by Fabien Vantard

2007-01-11 [mones]	0.2.3cvs2

	* TODO
		Synced with real world	
	* src/attachwarner.c
	* src/attachwarner_prefs.c
	* src/attachwarner_prefs.h