@@ -1,3 +1,9 @@
+2007-06-21 [colin]	0.2.6cvs1
+
+	* src/attachwarner.c
+	* src/attachwarner.h
+		Update plugin API
+
 2007-04-16 [paul]	0.2.6
 
 	0.2.6 released
